[gd_scene load_steps=5 format=3 uid="uid://bwjlldw2fm50n"]

[ext_resource type="Texture2D" uid="uid://bxysdgjxr1wen" path="res://assets/textures/ui/skill_slot/skill_placeholder.png" id="1_t1o8o"]
[ext_resource type="Script" uid="uid://ceul4birhrnrm" path="res://scenes/ui/skills/skill_slot/skill_slot.gd" id="1_wytqm"]
[ext_resource type="PackedScene" uid="uid://bsj2c4h85hjik" path="res://scenes/ui/skills/skill_icon/skill_icon.tscn" id="3_f2ja0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wytqm"]
content_margin_left = 3.0
content_margin_top = 0.0
content_margin_right = 3.0
bg_color = Color(0.144265, 0.135465, 2.40654e-08, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.997662, 0.96071, 0.833429, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="SkillSlot" type="Button" node_paths=PackedStringArray("keybind_label", "skill_icon")]
custom_minimum_size = Vector2(48, 48)
action_mode = 0
flat = true
script = ExtResource("1_wytqm")
keybind_label = NodePath("Hotkey")
skill_icon = NodePath("SkillIcon")
skill_placeholder = ExtResource("1_t1o8o")

[node name="SkillIcon" parent="." instance=ExtResource("3_f2ja0")]

[node name="Hotkey" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -19.0
offset_right = 8.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_wytqm")
text = "?"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
